src/parse/antlr/generated/TeamcenterLogParser.js
// Generated from src/parse/antlr/TeamcenterLog.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import TeamcenterLogListener from './TeamcenterLogListener.js';
import TeamcenterLogVisitor from './TeamcenterLogVisitor.js';


  // Для TS: import { ANTLRInputStream, CommonTokenStream } from 'antlr4ts';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class TeamcenterLogParser extends antlr4.Parser {

    static grammarFileName = "TeamcenterLog.g4";
    static literalNames = [ null, "'***'", "'*** system log created by'", 
                            "'Node Name'", "'Machine type'", "'OS'", "'# Processors'", 
                            "'Memory'", "'Total Swap'", "'Free  Swap'", 
                            "'Machine supports'", "'Running'", "'-'", "'UTC'", 
                            "'TC environment variables:'", "'='", "'Versions of DLLs are:'", 
                            "'====================='", "'START SQL_PROFILE_DUMP'", 
                            "'END SQL_PROFILE_DUMP'", "'Nr Calls Time   DB-Time Exec-Time Trips Rows  SQL Query'", 
                            "'______________________________________________________'", 
                            "'START JOURNALLED_TIMES'", "'START JOURNALLED_TIMES_IN_ALL_FUNCTIONS'", 
                            "'END JOURNALLED_TIMES_IN_ALL_FUNCTIONS'", "'END JOURNALLED_TIMES'", 
                            "'POM enquiries statistics:'", "'@@@ End of session'", 
                            "'(truncated'", "'characters)'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "LEVEL", 
                             "TIMESTAMP", "ID", "MESSAGE", "KEY", "VALUE", 
                             "PATH", "VERSION", "ADDR", "SIZE", "HASH", 
                             "DATE", "NR", "CALLS", "TIME", "DBTIME", "EXECTIME", 
                             "TRIPS", "ROWS", "SQL_QUERY", "SQL_CONTINUATION", 
                             "HIERARCHY_PREFIX", "PERC_TOTAL", "PERC_PARENT", 
                             "DB_TRIPS", "DEPTH", "ROUTINE", "DIGIT", "WS", 
                             "NEWLINE" ];
    static ruleNames = [ "logFile", "header", "systemInfo", "logLine", "envSection", 
                         "envLine", "dllSection", "dllLine", "sqlDump", 
                         "sqlHeader", "sqlRow", "journalSection", "journalLine", 
                         "pomStats", "endSession", "truncated", "otherLine" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TeamcenterLogParser.ruleNames;
        this.literalNames = TeamcenterLogParser.literalNames;
        this.symbolicNames = TeamcenterLogParser.symbolicNames;
    }



	logFile() {
	    let localctx = new LogFileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, TeamcenterLogParser.RULE_logFile);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294967294) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 268435455) !== 0)) {
	            this.state = 45;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 34;
	                this.header();
	                break;

	            case 2:
	                this.state = 35;
	                this.systemInfo();
	                break;

	            case 3:
	                this.state = 36;
	                this.logLine();
	                break;

	            case 4:
	                this.state = 37;
	                this.envSection();
	                break;

	            case 5:
	                this.state = 38;
	                this.dllSection();
	                break;

	            case 6:
	                this.state = 39;
	                this.sqlDump();
	                break;

	            case 7:
	                this.state = 40;
	                this.journalSection();
	                break;

	            case 8:
	                this.state = 41;
	                this.pomStats();
	                break;

	            case 9:
	                this.state = 42;
	                this.endSession();
	                break;

	            case 10:
	                this.state = 43;
	                this.truncated();
	                break;

	            case 11:
	                this.state = 44;
	                this.otherLine();
	                break;

	            }
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 50;
	        this.match(TeamcenterLogParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	header() {
	    let localctx = new HeaderContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, TeamcenterLogParser.RULE_header);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.match(TeamcenterLogParser.T__0);
	        this.state = 56;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 53;
	                this.matchWildcard(); 
	            }
	            this.state = 58;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	        }

	        this.state = 59;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 60;
	        this.match(TeamcenterLogParser.T__1);
	        this.state = 64;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 61;
	                this.matchWildcard(); 
	            }
	            this.state = 66;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	        this.state = 67;
	        this.match(TeamcenterLogParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	systemInfo() {
	    let localctx = new SystemInfoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, TeamcenterLogParser.RULE_systemInfo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.match(TeamcenterLogParser.T__2);
	        this.state = 73;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 70;
	                this.matchWildcard(); 
	            }
	            this.state = 75;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	        this.state = 76;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 77;
	        this.match(TeamcenterLogParser.T__3);
	        this.state = 81;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 78;
	                this.matchWildcard(); 
	            }
	            this.state = 83;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
	        }

	        this.state = 84;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 85;
	        this.match(TeamcenterLogParser.T__4);
	        this.state = 89;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 86;
	                this.matchWildcard(); 
	            }
	            this.state = 91;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	        this.state = 92;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 93;
	        this.match(TeamcenterLogParser.T__5);
	        this.state = 97;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 94;
	                this.matchWildcard(); 
	            }
	            this.state = 99;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	        this.state = 100;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 101;
	        this.match(TeamcenterLogParser.T__6);
	        this.state = 105;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 102;
	                this.matchWildcard(); 
	            }
	            this.state = 107;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	        this.state = 108;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 109;
	        this.match(TeamcenterLogParser.T__7);
	        this.state = 113;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 110;
	                this.matchWildcard(); 
	            }
	            this.state = 115;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	        }

	        this.state = 116;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 117;
	        this.match(TeamcenterLogParser.T__8);
	        this.state = 121;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 118;
	                this.matchWildcard(); 
	            }
	            this.state = 123;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	        }

	        this.state = 124;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 125;
	        this.match(TeamcenterLogParser.T__9);
	        this.state = 129;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 126;
	                this.matchWildcard(); 
	            }
	            this.state = 131;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
	        }

	        this.state = 132;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 133;
	        this.match(TeamcenterLogParser.T__10);
	        this.state = 137;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 134;
	                this.matchWildcard(); 
	            }
	            this.state = 139;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }

	        this.state = 140;
	        this.match(TeamcenterLogParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logLine() {
	    let localctx = new LogLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, TeamcenterLogParser.RULE_logLine);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.match(TeamcenterLogParser.LEVEL);
	        this.state = 143;
	        this.match(TeamcenterLogParser.WS);
	        this.state = 144;
	        this.match(TeamcenterLogParser.T__11);
	        this.state = 145;
	        this.match(TeamcenterLogParser.WS);
	        this.state = 146;
	        this.match(TeamcenterLogParser.TIMESTAMP);
	        this.state = 147;
	        this.match(TeamcenterLogParser.WS);
	        this.state = 148;
	        this.match(TeamcenterLogParser.T__12);
	        this.state = 149;
	        this.match(TeamcenterLogParser.WS);
	        this.state = 150;
	        this.match(TeamcenterLogParser.T__11);
	        this.state = 151;
	        this.match(TeamcenterLogParser.WS);
	        this.state = 152;
	        this.match(TeamcenterLogParser.ID);
	        this.state = 153;
	        this.match(TeamcenterLogParser.WS);
	        this.state = 154;
	        this.match(TeamcenterLogParser.T__11);
	        this.state = 155;
	        this.match(TeamcenterLogParser.WS);
	        this.state = 156;
	        this.match(TeamcenterLogParser.MESSAGE);
	        this.state = 157;
	        this.match(TeamcenterLogParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	envSection() {
	    let localctx = new EnvSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, TeamcenterLogParser.RULE_envSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this.match(TeamcenterLogParser.T__13);
	        this.state = 160;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 164;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 161;
	                this.envLine(); 
	            }
	            this.state = 166;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	envLine() {
	    let localctx = new EnvLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, TeamcenterLogParser.RULE_envLine);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===58) {
	            this.state = 167;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 172;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 173;
	        this.match(TeamcenterLogParser.KEY);
	        this.state = 174;
	        this.match(TeamcenterLogParser.T__14);
	        this.state = 175;
	        this.match(TeamcenterLogParser.VALUE);
	        this.state = 176;
	        this.match(TeamcenterLogParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dllSection() {
	    let localctx = new DllSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, TeamcenterLogParser.RULE_dllSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178;
	        this.match(TeamcenterLogParser.T__15);
	        this.state = 179;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 180;
	        this.match(TeamcenterLogParser.T__16);
	        this.state = 181;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 185;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 182;
	                this.dllLine(); 
	            }
	            this.state = 187;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dllLine() {
	    let localctx = new DllLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, TeamcenterLogParser.RULE_dllLine);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===58) {
	            this.state = 188;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 193;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 194;
	        this.match(TeamcenterLogParser.PATH);
	        this.state = 196; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 195;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 198; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 200;
	        this.match(TeamcenterLogParser.VERSION);
	        this.state = 202; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 201;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 204; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 206;
	        this.match(TeamcenterLogParser.ADDR);
	        this.state = 208; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 207;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 210; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 212;
	        this.match(TeamcenterLogParser.SIZE);
	        this.state = 214; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 213;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 216; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 218;
	        this.match(TeamcenterLogParser.HASH);
	        this.state = 220; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 219;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 222; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 224;
	        this.match(TeamcenterLogParser.DATE);
	        this.state = 225;
	        this.match(TeamcenterLogParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sqlDump() {
	    let localctx = new SqlDumpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, TeamcenterLogParser.RULE_sqlDump);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 227;
	        this.match(TeamcenterLogParser.T__17);
	        this.state = 228;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 229;
	        this.sqlHeader();
	        this.state = 230;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 234;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===42 || _la===58) {
	            this.state = 231;
	            this.sqlRow();
	            this.state = 236;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 237;
	        this.match(TeamcenterLogParser.T__18);
	        this.state = 238;
	        this.match(TeamcenterLogParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sqlHeader() {
	    let localctx = new SqlHeaderContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, TeamcenterLogParser.RULE_sqlHeader);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 240;
	        this.match(TeamcenterLogParser.T__19);
	        this.state = 241;
	        this.match(TeamcenterLogParser.NEWLINE);
	        this.state = 242;
	        this.match(TeamcenterLogParser.T__20);
	        this.state = 243;
	        this.match(TeamcenterLogParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sqlRow() {
	    let localctx = new SqlRowContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, TeamcenterLogParser.RULE_sqlRow);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 248;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===58) {
	            this.state = 245;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 250;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 251;
	        this.match(TeamcenterLogParser.NR);
	        this.state = 253; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 252;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 255; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 257;
	        this.match(TeamcenterLogParser.CALLS);
	        this.state = 259; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 258;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 261; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 263;
	        this.match(TeamcenterLogParser.TIME);
	        this.state = 265; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 264;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 267; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 269;
	        this.match(TeamcenterLogParser.DBTIME);
	        this.state = 271; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 270;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 273; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 275;
	        this.match(TeamcenterLogParser.EXECTIME);
	        this.state = 277; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 276;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 279; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 281;
	        this.match(TeamcenterLogParser.TRIPS);
	        this.state = 283; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 282;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 285; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 287;
	        this.match(TeamcenterLogParser.ROWS);
	        this.state = 289; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 288;
	            this.match(TeamcenterLogParser.WS);
	            this.state = 291; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===58);
	        this.state = 293;
	        this.match(TeamcenterLogParser.SQL_QUERY);
	        this.state = 298;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===59) {
	            this.state = 294;
	            this.match(TeamcenterLogParser.NEWLINE);
	            this.state = 295;
	            this.match(TeamcenterLogParser.SQL_CONTINUATION);
	            this.state = 300;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


